Fix WCAG gaps (#2921)
* Make front page title to be h1 instead of h2.

* Changed primary, secondary colors and h1 style to match contrast levels.

* Changed colorizer default scheme to match WCAG contrast rules.

* Changed background color for frontpage hero component.

* Changed button background color on hero component in front page.

* Compiled homepage styles.

* Fixed contrast of group membership color text.

* Fixed colors of datasets count and csv badges on search page.

* Compiled css for search page.

* Changed csv and zip badges color to match WCAG AAA contrast level.

* Changed secondary color to match WCAG AAA contrast level.

* Changed group membership label color to match WCAG AAA contrast level.

* Compiled styles.

* Addressing WCAG error of anchor element without link text

--- a/themes/nuboot_radix/scss/base/_variables.scss
+++ b/themes/nuboot_radix/scss/base/_variables.scss
@@ -22,8 +22,8 @@ $border:         #ddd;
 // Brand colors
 // -----------------------------------------------------------------------------
 
-$brand-primary:         #0A77BD;
-$brand-secondary:       #002245;
+$brand-primary:         #002245;
+$brand-secondary:       #145b98;
 $brand-success:         #5cb85c !default;
 $brand-warning:         #FFE285 !default;
 $brand-danger:          #d9534f !default;
